refactor API tests, add step classes and BaseTest, implement softAssertion