@@ -1,8 +1,9 @@
 package tests;
 
-import io.qameta.allure.Step;
+import model.OrderCreateRequest;
+import steps.OrderSteps;
+
 import io.qameta.allure.junit4.DisplayName;
-import io.restassured.RestAssured;
 import io.restassured.response.ValidatableResponse;
 import org.junit.After;
 import org.junit.Before;
@@ -14,11 +15,12 @@ import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
 
-import static io.restassured.RestAssured.given;
 import static org.hamcrest.Matchers.notNullValue;
 
 @RunWith(Parameterized.class)
-public class CreateOrderTest {
+public class CreateOrderTest extends BaseTest {
+
+    private OrderSteps orderSteps;
 
     private Integer createdOrderTrack;
     private final List<String> colors;
@@ -29,88 +31,54 @@ public class CreateOrderTest {
 
     @Parameterized.Parameters(name = "Colors: {0}")
     public static Object[][] getTestData() {
-        return new Object[][] {
-                {List.of("BLACK")},           // Один цвет BLACK
-                {List.of("GREY")},            // Один цвет GREY
-                {Arrays.asList("BLACK", "GREY")},   // Оба цвета
-                {null}                              // Без цвета
+        return new Object[][]{
+                {List.of("BLACK")},
+                {List.of("GREY")},
+                {Arrays.asList("BLACK", "GREY")},
+                {null}
         };
     }
 
     @Before
     public void setUp() {
-        RestAssured.baseURI = "https://qa-scooter.praktikum-services.ru";
+        orderSteps = new OrderSteps();
     }
 
     @After
     public void tearDown() {
         if (createdOrderTrack != null) {
-            cancelOrder(createdOrderTrack);
+            orderSteps.cancelOrder(createdOrderTrack);
+            createdOrderTrack = null;
         }
     }
 
     @Test
-    @DisplayName("Создание заказа с разными цветами")
+    @DisplayName("Создание заказа с указанием разных значений цвета")
     public void createOrderWithDifferentColorsTest() {
-        String body = createOrderBody(colors);
+        OrderCreateRequest body = createOrderBody(colors);
 
-        ValidatableResponse response = createOrder(body);
+        ValidatableResponse response = orderSteps.createOrder(body);
         createdOrderTrack = response.extract().path("track");
 
         response.statusCode(201)
                 .body("track", notNullValue());
     }
 
-    // ================ STEPS ================
+    // ================ HELPERS ================
 
-    @Step("Сформировать тело запроса с цветами: {colors}")
-    private String createOrderBody(List<String> colors) {
-        StringBuilder body = new StringBuilder();
+    private OrderCreateRequest createOrderBody(List<String> colors) {
         String deliveryDate = LocalDate.now().plusDays(3).toString();
 
-        body.append("{")
-                .append("\"firstName\":\"Тест\",")
-                .append("\"lastName\":\"Тестов\",")
-                .append("\"address\":\"ул. Тестовая, 1\",")
-                .append("\"metroStation\":\"1\",")
-                .append("\"phone\":\"+79999999999\",")
-                .append("\"rentTime\":3,")
-                .append("\"deliveryDate\":\"").append(deliveryDate).append("\",")
-                .append("\"comment\":\"Тестовый заказ\"");
-
-        if (colors != null && !colors.isEmpty()) {
-            body.append(", \"color\": [");
-            for (int i = 0; i < colors.size(); i++) {
-                body.append("\"").append(colors.get(i)).append("\"");
-                if (i < colors.size() - 1) {
-                    body.append(", ");
-                }
-            }
-            body.append("]");
-        }
-
-        body.append("}");
-        return body.toString();
-    }
-
-    @Step("Создать заказ")
-    public ValidatableResponse createOrder(String body) {
-        return given()
-                .header("Content-type", "application/json")
-                .body(body)
-                .post("/api/v1/orders")
-                .then();
-    }
-
-    @Step("Отменить заказ с track: {track}")
-    private void cancelOrder(Integer track) {
-        try {
-            given()
-                    .put("/api/v1/orders/cancel?track=" + track)
-                    .then()
-                    .statusCode(200);
-        } catch (Exception e) {
-            // Игнорируем ошибки (заказ может быть уже отменен)
-        }
+        return new OrderCreateRequest(
+                "Тест",
+                "Тестов",
+                "ул. Тестовая, 1",
+                "1",
+                "+79999999999",
+                3,
+                deliveryDate,
+                "Тестовый заказ",
+                colors
+        );
     }
 }
